# Tgbotcogvideo

./: .env.example  .gitignore  .replit  CLAUDE.md  CODEX.md  DATA_MIGRATION_GUIDE.md  DEPLOYMENT_STATUS.md  MIGRATION_SUMMARY.md  Procfile  RAILWAY_MIGRATION_GUIDE.md  RAILWAY_SETUP.md  README.md  REPLIT_SETUP.md  UnboundGPT_Pricing_Guide.docx  WEBHOOK_AUTO_SETUP.md  WEBHOOK_SETUP.md  WEBHOOK_STABILITY_FIXES.md  broadcast.py  check_gpu_server.py  claude.md  create_pricing_doc.py  enable_neon_endpoint.py  gunicorn.conf.py  llm_api.py  logging_config.py  main.py  memory_utils.py  migrate_db_quick.sh  migrate_replit_to_railway.py  models.py  nixpacks.toml  nowpayments_wrapper.py  pyproject.toml  quick_discord_send.py  railway_start.sh  register_webhook.py  replit.md  requirements.txt  security.py  sediDHbd9  (+16 more)
attached_assets/: INTEGRATION_GUIDE_1762029087990.md  Pasted-ALLOW-EMAIL-LOGIN-true-ALLOW-REGISTRATION-true-ALLOW-SOCIAL-LOGIN-false-ALLOW-SOCIAL-REGIST-1762026405228_1762026405228.txt  Pasted-Alright-I-ve-done-a-comprehensive-deep-dive-Here-s-everything-that-s-wrong-with-your-Replit-bo-1762721546965_1762721546966.txt  Pasted-You-re-right-Here-s-the-complete-handoff-for-your-Replit-agent-Video-Generation-API-Integration--1762929883272_1762929883273.txt  README_1762029087990.md  TELEGRAM_BOT_SETUP_1763116392685.md  UPDATED_BOT_CODE_1763117616927.py  chat_1762029087991.html  content-1761919266929.md  content-1761920628751.md  database_lock_manager_1762737890390.py  database_optimizer_1762737890406.py  logs.1762007141563.log_1762007165195.txt  (+4 more)
gpu_server_setup/: .env.example  (+9 more)
(+5 files in other folders)
