[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "nowpayments-api>=1.0.2",
    "openai>=1.73.0",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.2.0",
    "python-telegram-bot>=22.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]
